k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-web
spec:
  selector:
    app: sample-web
  ports:
    - port: 8080
      targetPort: 8080
